--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -1,10 +1,8 @@
 name: Android CI
 
 on:
-  push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main, develop ]
+  push:              # Runs on any branch push
+  pull_request:      # Runs on any pull request
 
 jobs:
   test:
