--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -46,6 +46,53 @@ jobs:
           app/build/test-results/
           app/build/reports/
         
+  android-test:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+    
+    - name: Cache Gradle packages
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+    
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    
+    - name: Set up Android SDK
+      uses: android-actions/setup-android@v3
+    
+    - name: Build debug APK
+      run: ./gradlew assembleDebug
+    
+    - name: Run connected tests
+      uses: reactivecircus/android-emulator-runner@v2
+      with:
+        api-level: 34
+        script: ./gradlew connectedDebugAndroidTest
+    
+    - name: Upload test results
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: android-test-results
+        path: |
+          app/build/outputs/androidTest-results/
+          app/build/reports/androidTests/
+        
   lint:
     runs-on: ubuntu-latest
     
