Add connected Android tests with emulator runner

--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -82,7 +82,10 @@ jobs:
       uses: reactivecircus/android-emulator-runner@v2
       with:
         api-level: 34
+        arch: x86_64
         script: ./gradlew connectedDebugAndroidTest
+        disable-animations: false
+        emulator-options: -no-window -no-audio -gpu swiftshader_indirect
     
     - name: Upload test results
       if: always()
@@ -92,6 +95,13 @@ jobs:
         path: |
           app/build/outputs/androidTest-results/
           app/build/reports/androidTests/
+    
+    - name: Upload screenshots
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-screenshots
+        path: app/build/outputs/androidTest-results/connected/screenshots/
         
   lint:
     runs-on: ubuntu-latest
